# OblivionisRAT

./: .gitignore  Protocol.md  README.md  command.md  go.mod
Document/: CS与BRC4使用指南.md
FE/hacker_client/: package.json  pnpm-lock.yaml
FE/hacker_client/src-tauri/: Cargo.toml  tauri.conf.json
FE/hacker_client_v1/: index.html  package.json  pnpm-lock.yaml  test.py  tsconfig.json  vite.config.ts
FE/hacker_client_v1/src/: counter.ts  counter.tsx  main.tsx  style.css
FE/hacker_client_v1/src-tauri/: Cargo.toml  tauri.conf.json
FE/hacker_client_v1/src-tauri/src/: main.rs
FE/hacker_client_v1/src/api/: Beacons.ts  Listener.ts  NewBeacon.ts  Shell.ts  ping.ts
FE/hacker_client_v1/src/component/: lazyWrap.tsx
FE/hacker_client_v1/src/http/: CONST.ts  index.ts
teamserver/: .gitignore  AES.go  Client.go  GenerateBeacon.go  Jobs.go  KeyExchange.go  Listener.go  NewAES.go  NewKeyExchange.go  c2.txt  go.mod  handler.go  main.go  structs.go  xmldb.go
teamserver/Client/: config.xml
teamserver/Listener/: 1002.xml  1003.xml  1212.xml  ilovec2.xml  test.xml
teamserver/encrypt/: AES.go  hex.py  request.py  sokconn.py
trojan/: CMakeLists.txt  GenerateBeacon.go  KeyExchange.cpp  KeyExchange.hpp  Network.cpp  Network.hpp  OblivionisAES.cpp  base64.cpp  base64.hpp  build.bat  cmd.bat  command.cpp  command.hpp  debug.cpp  debug.hpp  main.cpp  output.txt  test.bat
trojan/encrypt/: KeyExchange.cpp  KeyExchange.hpp  Network.cpp  Network.hpp  OblivionisAES.cpp  OblivionisAES.hpp  Web.bat  base64.c  base64.h  build.bat  command.hpp  debug.hpp  main.cpp  testHex.bat
(+11 files in other folders)
